change all design 10/3/24

--- a/app/src/main/res/layout/activity_age.xml
+++ b/app/src/main/res/layout/activity_age.xml
@@ -20,7 +20,7 @@
             android:id="@+id/linearLayout"
             android:background="@color/dark_blue"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="?attr/actionBarSize"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
@@ -101,10 +101,10 @@
                 android:id="@+id/rl_age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="200dp"
                 android:layout_marginStart="100dp"
                 android:layout_marginEnd="100dp"
                 android:gravity="center"
+                android:layout_marginTop="200dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="true"
                 android:orientation="vertical"
@@ -114,11 +114,11 @@
                     android:id="@+id/age_num"
                     android:layout_width="150dp"
                     android:layout_height="300dp"
-                    android:layout_gravity="center"
-                    android:baselineAligned="false"
-                    android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_gravity="center"
+                    android:baselineAligned="false"
                     android:elevation="20dp"
                     android:gravity="center"
                     app:np_dividerColor="@color/dark_cyan"
@@ -139,7 +139,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="70dp"
                 android:layout_below="@+id/rl_age"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="true"
@@ -152,7 +151,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginEnd="25dp"
-                    android:layout_alignParentTop="true"
+                    android:layout_marginVertical="40dp"
+                    android:layout_alignParentBottom="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="true"
                     android:background="@drawable/btn_bg"
