--- a/app/src/main/res/layout/activity_booking_detail.xml
+++ b/app/src/main/res/layout/activity_booking_detail.xml
@@ -21,7 +21,7 @@
             android:id="@+id/linearLayout"
             android:background="@color/dark_blue"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="?attr/actionBarSize"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
@@ -301,6 +301,7 @@
                                     android:layout_marginStart="20dp"
                                     android:layout_marginTop="10dp"
                                     android:layout_marginEnd="15dp"
+                                    android:layout_marginBottom="20dp"
                                     android:fontFamily="@font/nunito_regular"
                                     android:padding="10dp"
                                     android:paddingStart="15dp"
@@ -309,14 +310,7 @@
                                     android:textSize="18sp"
                                     tools:ignore="HardcodedText,RtlSymmetry,SpUsage,TouchTargetSizeCheck,TextSizeCheck" />
 
-                                <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="5dp"
-                                    android:layout_marginBottom="20dp"
-                                    android:src="@drawable/ic_line"
-                                    tools:ignore="ContentDescription" />
-                            </LinearLayout>
+                                </LinearLayout>
                         </RelativeLayout>
 
                     </androidx.cardview.widget.CardView>
@@ -471,6 +465,7 @@
                                     android:layout_marginStart="20dp"
                                     android:layout_marginTop="10dp"
                                     android:layout_marginEnd="15dp"
+                                    android:layout_marginBottom="20dp"
                                     android:fontFamily="@font/nunito_regular"
                                     android:padding="10dp"
                                     android:paddingStart="15dp"
@@ -479,14 +474,7 @@
                                     android:textSize="18sp"
                                     tools:ignore="HardcodedText,RtlSymmetry,SpUsage,TouchTargetSizeCheck,TextSizeCheck" />
 
-                                <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="5dp"
-                                    android:layout_marginBottom="20dp"
-                                    android:src="@drawable/ic_line"
-                                    tools:ignore="ContentDescription" />
-                            </LinearLayout>
+                               </LinearLayout>
                         </RelativeLayout>
 
                     </androidx.cardview.widget.CardView>
