--- a/app/src/main/res/layout/activity_goal.xml
+++ b/app/src/main/res/layout/activity_goal.xml
@@ -20,7 +20,7 @@
             android:id="@+id/linearLayout"
             android:background="@color/dark_blue"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="?attr/actionBarSize"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
@@ -61,8 +61,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="60dp"
-            android:layout_alignParentTop="true"
+            android:layout_below="@id/linearLayout"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
@@ -101,7 +100,7 @@
                 android:id="@+id/rl_age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="200dp"
+                android:layout_marginTop="150dp"
                 android:layout_marginStart="100dp"
                 android:layout_marginEnd="100dp"
                 android:gravity="center"
@@ -112,14 +111,13 @@
 
                 <NumberPicker
                     android:id="@+id/np_goal"
-                    android:layout_width="150dp"
+                    android:layout_width="200dp"
                     android:layout_height="300dp"
                     android:layout_centerInParent="true" />
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="70dp"
                 android:layout_below="@+id/rl_age"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="true"
@@ -132,7 +130,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginEnd="25dp"
-                    android:layout_alignParentTop="true"
+                    android:layout_marginVertical="60dp"
+                    android:layout_alignParentBottom="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="true"
                     android:background="@drawable/btn_bg"
