--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,7 +21,7 @@
             android:id="@+id/linearLayout"
             android:background="@color/dark_blue"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="?attr/actionBarSize"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
@@ -62,7 +62,6 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
             android:layout_below="@+id/linearLayout"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
@@ -433,19 +432,13 @@
                                 android:layout_marginStart="20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginEnd="15dp"
+                                android:layout_marginBottom="20dp"
                                 android:padding="10dp"
                                 android:paddingStart="15dp"
                                 android:text="Beginner"
                                 android:textColor="@color/black"
                                 android:textSize="18sp"
                                 tools:ignore="HardcodedText,RtlSymmetry,SpUsage,TouchTargetSizeCheck" />
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:src="@drawable/ic_line"
-                                android:layout_marginBottom="20dp"
-                                tools:ignore="ContentDescription" />
 
 
                         </LinearLayout>
