--- a/app/src/main/res/layout/activity_profile_user_name.xml
+++ b/app/src/main/res/layout/activity_profile_user_name.xml
@@ -20,7 +20,7 @@
             android:id="@+id/linearLayout"
             android:background="@color/dark_blue"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="?attr/actionBarSize"
             android:orientation="horizontal"
             tools:ignore="MissingConstraints">
 
@@ -58,8 +58,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="60dp"
-            android:layout_alignParentTop="true"
+            android:layout_below="@id/linearLayout"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
