--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -72,7 +72,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
-                    android:paddingVertical="5dp">
+                    android:paddingVertical="10dp">
 
                     <RelativeLayout
                         android:layout_width="wrap_content"
@@ -108,6 +108,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="0 Workout plan"
+                                android:layout_marginTop="10dp"
                                 android:fontFamily="@font/nunito_bold"
                                 android:layout_alignParentTop="true"
                                 android:layout_alignParentStart="true"
@@ -130,8 +131,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/nunito_regular"
-                                android:textSize="12sp"
-                                android:layout_marginTop="2dp"
+                                android:textSize="16sp"
                                 android:layout_marginEnd="50dp"
                                 android:layout_alignParentEnd="true"
                                 android:textColor="@color/dark_cyan"
@@ -142,7 +142,8 @@
                                 android:layout_width="24dp"
                                 android:layout_height="24dp"
                                 android:layout_alignParentEnd="true"
-                                android:layout_marginEnd="20dp"
+                                android:layout_alignParentBottom="true"
+                                android:layout_marginEnd="25dp"
                                 android:src="@drawable/ic_angle_small_down"
                                 tools:ignore="ContentDescription,ObsoleteLayoutParam" />
 
