--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -90,6 +90,11 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <RelativeLayout
+                    android:id="@+id/rl_all_text"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
@@ -158,7 +163,7 @@
                             android:id="@+id/rl_hori_he"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="200dp"
+                            android:layout_marginStart="180dp"
                             android:orientation="horizontal"
                             android:layout_alignParentTop="true"
                             android:layout_alignParentStart="true"
@@ -170,6 +175,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentStart="true"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginEnd="80dp"
                                 android:fontFamily="@font/nunito_bold"
                                 android:text="@string/Heaviest"
                                 android:textColor="@color/text"
@@ -190,7 +197,7 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="200dp"
+                            android:layout_marginStart="180dp"
                             android:orientation="horizontal"
                             android:layout_below="@+id/rl_hori_he"
                             android:layout_alignParentStart="true"
@@ -201,6 +208,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentStart="true"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginEnd="80dp"
                                 android:text="@string/Lightest"
                                 android:textColor="@color/text"
                                 android:fontFamily="@font/nunito_bold"
@@ -224,26 +233,33 @@
                 </RelativeLayout>
 
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="140dp"
-                    android:layout_marginBottom="10dp">
+                    android:orientation="horizontal"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/rl_all_text"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp">
 
                     <com.github.mikephil.charting.charts.LineChart
                         android:id="@+id/lineChart"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="20dp"
+                        android:layout_width="300dp"
+                        android:layout_height="200dp"
                         android:layout_marginBottom="20dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_gravity="center"
                         tools:ignore="MissingClass" />
 
 
-                </LinearLayout>
+                </RelativeLayout>
+
+                </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
 
