tranenr file update

--- a/app/src/main/res/layout/activity_workout_plan.xml
+++ b/app/src/main/res/layout/activity_workout_plan.xml
@@ -77,82 +77,81 @@
             android:layout_alignParentBottom="true"
             tools:ignore="ObsoleteLayoutParam,ScrollViewSize">
 
-            <RelativeLayout
-                android:id="@+id/rl_workout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginTop="20dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                tools:ignore="UselessLeaf">
+<!--            <RelativeLayout-->
+<!--                android:id="@+id/rl_workout"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="30dp"-->
+<!--                android:layout_marginEnd="30dp"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                android:layout_alignParentStart="true"-->
+<!--                android:layout_alignParentEnd="true"-->
+<!--                android:layout_alignParentTop="true"-->
+<!--                tools:ignore="UselessLeaf">-->
 
-                <LinearLayout
-                    android:id="@+id/workout_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentEnd="true"
-                    android:orientation="vertical"
-                    tools:ignore="UselessParent">
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/workout_name"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="15dp"-->
+<!--                    android:layout_alignParentTop="true"-->
+<!--                    android:layout_alignParentStart="true"-->
+<!--                    android:layout_alignParentEnd="true"-->
+<!--                    android:orientation="vertical"-->
+<!--                    tools:ignore="UselessParent">-->
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Workout plan name"
-                        android:fontFamily="@font/opensans_bold"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="100dp"
-                        android:textSize="18sp"
-                        android:textColor="@color/black"
-                        tools:ignore="HardcodedText,ObsoleteLayoutParam" />
+<!--                    <androidx.appcompat.widget.AppCompatTextView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="Workout plan name"-->
+<!--                        android:fontFamily="@font/opensans_bold"-->
+<!--                        android:layout_alignParentTop="true"-->
+<!--                        android:layout_alignParentStart="true"-->
+<!--                        android:layout_alignParentEnd="true"-->
+<!--                        android:layout_marginEnd="100dp"-->
+<!--                        android:textSize="18sp"-->
+<!--                        android:textColor="@color/black"-->
+<!--                        tools:ignore="HardcodedText,ObsoleteLayoutParam" />-->
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="0 exercises"
-                        android:fontFamily="@font/nunito_bold"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="100dp"
-                        android:textSize="16sp"
-                        android:textColor="@color/text"
-                        tools:ignore="HardcodedText,ObsoleteLayoutParam" />
+<!--                    <androidx.appcompat.widget.AppCompatTextView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="0 exercises"-->
+<!--                        android:fontFamily="@font/nunito_bold"-->
+<!--                        android:layout_alignParentTop="true"-->
+<!--                        android:layout_alignParentStart="true"-->
+<!--                        android:layout_alignParentEnd="true"-->
+<!--                        android:layout_marginEnd="100dp"-->
+<!--                        android:textSize="16sp"-->
+<!--                        android:textColor="@color/text"-->
+<!--                        tools:ignore="HardcodedText,ObsoleteLayoutParam" />-->
 
-                </LinearLayout>
+<!--                </LinearLayout>-->
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/img_user"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="30dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:src="@drawable/dumbbell_img"
-                    app:civ_border_color="@color/text"
-                    app:civ_border_width="1dp"
-                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />
+<!--                <de.hdodenhof.circleimageview.CircleImageView-->
+<!--                    android:id="@+id/img_user"-->
+<!--                    android:layout_width="60dp"-->
+<!--                    android:layout_height="60dp"-->
+<!--                    android:layout_alignParentTop="true"-->
+<!--                    android:layout_alignParentEnd="true"-->
+<!--                    android:layout_marginEnd="30dp"-->
+<!--                    android:layout_marginTop="5dp"-->
+<!--                    android:layout_marginBottom="5dp"-->
+<!--                    android:src="@drawable/dumbbell_img"-->
+<!--                    app:civ_border_color="@color/text"-->
+<!--                    app:civ_border_width="1dp"-->
+<!--                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />-->
 
 
-            </RelativeLayout>
+<!--            </RelativeLayout>-->
 
             <RelativeLayout
                 android:id="@+id/rl_exercises"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/rl_workout">
-
+            android:layout_alignParentEnd="true">
+<!--                android:layout_below="@+id/rl_workout"-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
