--- a/app/src/main/res/layout/activity_exercises.xml
+++ b/app/src/main/res/layout/activity_exercises.xml
@@ -114,7 +114,7 @@
                             android:layout_height="wrap_content">
 
                             <ImageView
-                                android:id="@+id/circleImageView"
+                                android:id="@+id/exe_image"
                                 android:layout_width="200dp"
                                 android:layout_height="200dp"
                                 android:layout_centerHorizontal="true"
@@ -165,6 +165,7 @@
                             tools:ignore="HardcodedText" />
 
                         <androidx.appcompat.widget.AppCompatEditText
+                            android:id="@+id/exercised_body"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
@@ -203,6 +204,7 @@
                             tools:ignore="HardcodedText" />
 
                         <androidx.appcompat.widget.AppCompatEditText
+                            android:id="@+id/exercised_equipment"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
@@ -238,6 +240,7 @@
                             tools:ignore="HardcodedText" />
 
                         <androidx.appcompat.widget.AppCompatEditText
+                            android:id="@+id/exercised_description"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/Description"
