--- a/app/src/main/res/layout/my_workout_plans_home_list_item.xml
+++ b/app/src/main/res/layout/my_workout_plans_home_list_item.xml
@@ -44,6 +44,7 @@
 
 
                     <ImageView
+                        android:id="@+id/exercises_image"
                         android:layout_width="300dp"
                         android:layout_height="200dp"
                         android:layout_gravity="center"
@@ -67,7 +68,7 @@
                         android:padding="10dp">
 
                         <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/tv_Workout_plan_name"
+                            android:id="@+id/exercises_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingStart="20dp"
@@ -79,10 +80,11 @@
                             tools:ignore="HardcodedText,RtlSymmetry,SpUsage,TextSizeCheck" />
 
                         <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/exercises_alllist"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingStart="20dp"
-                            android:layout_below="@+id/tv_Workout_plan_name"
+                            android:layout_below="@+id/exercises_name"
                             android:layout_alignParentStart="true"
                             android:layout_alignParentEnd="true"
                             android:text="0 exercises"
